--- a/NoAwkwardSilence/NoAwkwardSilence.csproj
+++ b/NoAwkwardSilence/NoAwkwardSilence.csproj
@@ -49,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Audio.cs" />
+    <Compile Include="CustomTabControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
